# ScribePy

./: .gitignore  README.md  pyproject.toml  setup.py
scribepy/: __init__.py  __main__.py  cli.py  models.py  parser.py  renderer.py  requirements.txt  scribepy.py
templates/: docs.html  example.md
tests/: test_scribepy.py
