[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ScribePy"
version = "0.2.0"
description = "AST-backed Python API documentation generator with Markdown and HTML output"
authors = [
  { name="Fabio Carvalho", email="hipnologo@proton.me" },
]
readme = "README.md"
requires-python = ">=3.9"
keywords = ["documentation", "python", "api", "ast", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
license = { file = "LICENSE" }

[project.scripts]
scribepy = "scribepy.cli:main"

[project.urls]
"Homepage" = "https://github.com/hipnologo/ScribePy"
"Bug Tracker" = "https://github.com/hipnologo/ScribePy/issues"

[tool.setuptools.packages.find]
include = ["scribepy*"]
